--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "bitsandbytes>=0.49.2",
     "datasets>=4.6.0",
+    "matplotlib>=3.10.8",
     "peft>=0.18.1",
     "transformers==4.56.2",
     "trl>=0.29.0",
